clusters/main/kubernetes/system/forgejo-runner/app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: forgejo-runner
  labels:
    app.kubernetes.io/name: forgejo-runner
    runner.homelab.dev/trust: trusted
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/warn: privileged
    pod-security.kubernetes.io/audit: privileged
