clusters/main/kubernetes/system/forgejo-runner/app/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-ingress
  namespace: forgejo-runner
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: forgejo-runner
  policyTypes:
    - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dns-egress
  namespace: forgejo-runner
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: forgejo-runner
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-web-egress
  namespace: forgejo-runner
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: forgejo-runner
  policyTypes:
    - Egress
  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - protocol: TCP
          port: 80
        - protocol: TCP
          port: 443
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-forgejo-http-egress
  namespace: forgejo-runner
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: forgejo-runner
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: forgejo
          podSelector:
            matchLabels:
              app.kubernetes.io/instance: forgejo
              app.kubernetes.io/name: gitea
      ports:
        - protocol: TCP
          port: 3000
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-forgejo-ssh-egress
  namespace: forgejo-runner
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: forgejo-runner
  policyTypes:
    - Egress
  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - protocol: TCP
          port: 2222
